// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`configuration uses provided configuration ({"persistentSelectionClass":""}) 1`] = `
<div contenteditable="true"
     role="textbox"
     aria-multiline="true"
     aria-label
     class="ProseMirror remirror-editor"
>
  <p>
    Some text
  </p>
</div>
`;

exports[`configuration uses provided configuration ({"persistentSelectionClass":"selection"}) 1`] = `
<div contenteditable="true"
     role="textbox"
     aria-multiline="true"
     aria-label
     class="ProseMirror remirror-editor"
>
  <p>
    Som
    <span class="selection">
      e tex
    </span>
    t
  </p>
</div>
`;

exports[`configuration uses provided configuration ({}) 1`] = `
<div contenteditable="true"
     role="textbox"
     aria-multiline="true"
     aria-label
     class="ProseMirror remirror-editor"
>
  <p>
    Som
    <span class="selection">
      e tex
    </span>
    t
  </p>
</div>
`;

exports[`configuration uses provided configuration ({}) 2`] = `
<div contenteditable="true"
     role="textbox"
     aria-multiline="true"
     aria-label
     class="ProseMirror remirror-editor"
>
  <p>
    Some text
  </p>
</div>
`;

exports[`focus retains selection and decoration 1`] = `
<div contenteditable="true"
     role="textbox"
     aria-multiline="true"
     aria-label
     class="ProseMirror remirror-editor"
>
  <p>
    Som
    <span class="selection">
      e tex
    </span>
    t
  </p>
</div>
`;
